--- a/confusion/package.json
+++ b/confusion/package.json
@@ -25,7 +25,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.8.1",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.3.9",
+    "react-navigation": "2.0.1",
     "react-navigation-stack": "react-navigation/stack"
   },
   "devDependencies": {
