--- a/confusion/package.json
+++ b/confusion/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "expo": "^37.0.0",
+    "expo-permissions": "8.1.0",
     "expo-secure-store": "8.1.0",
     "expo-splash-screen": "^0.2.3",
     "expo-updates": "~0.2.1",
