--- a/confusion/package.json
+++ b/confusion/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/netinfo": "5.5.1",
     "expo": "^37.0.0",
     "expo-asset": "8.1.5",
+    "expo-calendar": "8.1.0",
     "expo-image-manipulator": "8.1.0",
     "expo-image-picker": "8.1.0",
     "expo-mail-composer": "8.1.0",
